Excluded Tokenization and Feature Extraction from pipeline

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -39,12 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm.auto import tqdm\n",
     "from random import choice"
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +63,12 @@
     "    remove_special_characters,\n",
     "    normalize_whitespace,\n",
     "    to_lowercase\n",
-    ")\n",
-    "from data_preprocessing.tokenizer import tokenize_text\n",
-    "from data_preprocessing.feature_extraction import extract_features"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,24 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a935c0f06f934baba969571152686b6e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if config[\"augmentation\"][\"synonym_replacement\"][\"enabled\"]:\n",
     "    n_samples = int(max(config[\"augmentation\"][\"synonym_replacement\"][\"n_samples\"] * len(data), 1))\n",
@@ -186,24 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c93eac687da94b938fdb3f4e3b3e1187",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if config[\"augmentation\"][\"paraphrasing\"][\"enabled\"]:\n",
     "    n_samples = int(max(config[\"augmentation\"][\"paraphrasing\"][\"n_samples\"] * len(data), 1))\n",
@@ -229,24 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3490c1c266f947d0a72bede02cf3a892",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if config[\"augmentation\"][\"style_transfer\"][\"enabled\"]:\n",
     "    n_samples = int(max(config[\"augmentation\"][\"paraphrasing\"][\"n_samples\"] * len(data), 1))\n",
@@ -290,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,75 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "data[\"text\"] = data[\"text\"].apply(lambda x: clean_text(x, config[\"preprocessing\"]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Tokenization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing: 100%|██████████| 13/13 [00:00<00:00, 7518.75it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "data_tokenized = tokenize_text(data, tokenizer_name=config[\"tokenization\"][\"tokenizer_model\"], max_length=config[\"tokenization\"][\"sequence_max_length\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Feature Extraction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Extracting features: 100%|██████████| 1/1 [00:01<00:00,  1.11s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "X = extract_features(data_tokenized, model_name=config[\"tokenization\"][\"tokenizer_model\"], batch_size=32)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Match labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = data[\"label\"].to_numpy(dtype=np.int32)"
    ]
   },
   {
@@ -395,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +291,7 @@
     "                config[\"augmentation\"][\"paraphrasing\"][\"enabled\"],\n",
     "                config[\"augmentation\"][\"style_transfer\"][\"enabled\"]])\n",
     "\n",
-    "np.savez_compressed(f\"{config[\"output\"]}/preprocessed_data{'_augmented' if augmented else ''}.npz\", X=X, y=y)"
+    "data.to_parquet(f\"{config['output']}/preprocessed_data{'_augmented' if augmented else ''}.parquet\", index=False)"
    ]
   }
  ],
