--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,13 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_all_datasets()\n",
-    "\n",
-    "data = data.head(10) #TODO Remove"
+    "data = read_all_datasets()"
    ]
   },
   {
@@ -135,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
