Pipeline Preprocessing: Domain Tagging + Data Duplicates

--- a/models/Logistic_Regression copy.ipynb
+++ b/models/Logistic_Regression copy.ipynb
@@ -25,6 +25,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "361497"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = read_all_datasets()\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
