--- a/prepare_datasets/llm-misinformation/make_dataset.ipynb
+++ b/prepare_datasets/llm-misinformation/make_dataset.ipynb
@@ -20,9 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'single_datasets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Dataset consists of many single datasets. Download as many as you like and put them in a folder called 'single_datasets'. See Google Drive for my list: https://drive.google.com/drive/folders/1yRudLthZg8OV-LAGlLVh-T9lSFkFjFbC?usp=share_link\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msingle_datasets\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m f\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'single_datasets'"
+     ]
+    }
+   ],
    "source": [
     "# Dataset consists of many single datasets. Download as many as you like and put them in a folder called 'single_datasets'. See Google Drive for my list: https://drive.google.com/drive/folders/1yRudLthZg8OV-LAGlLVh-T9lSFkFjFbC?usp=share_link\n",
     "data = [f for f in os.listdir(\"single_datasets\") if f.endswith('.csv')]"
