--- a/prepare_datasets/llm-misinformation/process_dataset.ipynb
+++ b/prepare_datasets/llm-misinformation/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "read_dataset()\n",
       "read_all_datasets()\n",
+      "read_processed_data()\n",
       "combine_text_columns()\n",
-      "split_data()\n",
-      "extract_data()\n",
+      "split_train_test()\n",
       "evaluate_model()\n",
       "detect_missing_values()\n"
      ]
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
