Added Dataset FakeNewsNet

--- a/prepare_datasets/FakeNewsNet/make_dataset.ipynb
+++ b/prepare_datasets/FakeNewsNet/make_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,16 @@
    "metadata": {},
    "source": [
     "## Load in Datasets\n",
-    "Dataset: https://www.kaggle.com/datasets/rajatkumar30/fake-news"
+    "Dataset: https://www.kaggle.com/datasets/algord/fake-news"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"news.csv\")"
+    "df = pd.read_csv(\"FakeNewsNet.csv\")"
    ]
   },
   {
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet(\"Fake News Prediction.parquet\", index=False)"
+    "df.to_parquet(\"FakeNewsNet.parquet\", index=False)"
    ]
   }
  ],
