--- a/prepare_datasets/FakeNewsNet/process_dataset.ipynb
+++ b/prepare_datasets/FakeNewsNet/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "read_dataset()\n",
       "read_all_datasets()\n",
+      "read_processed_data()\n",
       "combine_text_columns()\n",
-      "split_data()\n",
-      "extract_data()\n",
+      "split_train_test()\n",
       "evaluate_model()\n",
       "detect_missing_values()\n"
      ]
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet(\"Fake News Prediction.parquet\")"
+    "df = pd.read_parquet(\"FakeNewsNet.parquet\")"
    ]
   },
   {
@@ -57,16 +57,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=[\"Unnamed: 0\"], axis=1, inplace=True)"
+    "df[\"label\"] = (df[\"real\"] != 1).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=[\"news_url\", \"source_domain\", \"tweet_num\", \"real\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.rename(columns={\"title\": \"text\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +92,6 @@
      "output_type": "stream",
      "text": [
       "Missing values per column:\n",
-      "title    0\n",
       "text     0\n",
       "label    0\n",
       "dtype: int64\n",
@@ -90,24 +107,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"label\"] = df[\"label\"].apply(lambda x: 0 if x == \"REAL\" else 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = combine_text_columns(df, [\"title\", \"text\"])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_parquet(\"../../datasets/Fake News Prediction/real.parquet\", index=False)\n",
-    "fake_df.to_parquet(\"../../datasets/Fake News Prediction/fake.parquet\", index=False)"
+    "real_df.to_parquet(\"../../datasets/FakeNewsNet/real.parquet\", index=False)\n",
+    "fake_df.to_parquet(\"../../datasets/FakeNewsNet/fake.parquet\", index=False)"
    ]
   }
  ],
