DANN optimizations and kMeans visualization

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,8 @@
     "data = add_domain(data, \n",
     "                  k=config[\"domain_tagging\"][\"n_domains\"],\n",
     "                  save_embeddings=config[\"domain_tagging\"][\"save_embeddings\"], \n",
-    "                  use_saved_embeddings=config[\"domain_tagging\"][\"use_saved_embeddings\"])"
+    "                  use_saved_embeddings=config[\"domain_tagging\"][\"use_saved_embeddings\"],\n",
+    "                  plot_kmeans=config[\"domain_tagging\"][\"plot\"])"
    ]
   },
   {
