Validation evaluation and data loading added

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -249,6 +249,7 @@
    "source": [
     "data = add_domain(data, \n",
     "                  k=config[\"domain_tagging\"][\"n_domains\"],\n",
+    "                  tokenizer_model = config[\"tokenization\"][\"tokenizer_model\"],\n",
     "                  save_embeddings=config[\"domain_tagging\"][\"save_embeddings\"], \n",
     "                  use_saved_embeddings=config[\"domain_tagging\"][\"use_saved_embeddings\"],\n",
     "                  plot_kmeans=config[\"domain_tagging\"][\"plot\"])"
