--- a/prepare_datasets/FakeNewsNet/process_dataset.ipynb
+++ b/prepare_datasets/FakeNewsNet/process_dataset.ipynb
@@ -14,6 +14,7 @@
       "read_processed_data()\n",
       "combine_text_columns()\n",
       "split_train_test()\n",
+      "extract_data()\n",
       "evaluate_model()\n",
       "detect_missing_values()\n"
      ]
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
