--- a/prepare_datasets/MultiFC/process_dataset.ipynb
+++ b/prepare_datasets/MultiFC/process_dataset.ipynb
@@ -14,6 +14,7 @@
       "read_processed_data()\n",
       "combine_text_columns()\n",
       "split_train_test()\n",
+      "extract_data()\n",
       "evaluate_model()\n",
       "detect_missing_values()\n"
      ]
@@ -46,29 +47,6 @@
    "outputs": [],
    "source": [
     "df = pd.read_parquet(\"MultiFC.parquet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['claimID', 'claim', 'label', 'claimURL', 'reason', 'categories',\n",
-       "       'speaker', 'checker', 'tags', 'article title', 'publish date',\n",
-       "       'climate', 'entities'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
