--- a/models/Naive_Bayes.ipynb
+++ b/models/Naive_Bayes.ipynb
@@ -137,13 +137,12 @@
     "                      else \"cpu\")\n",
     "print(f\"Using device >> {device}\")\n",
     "\n",
-    "embedder = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\")\n",
-    "embedder = embedder.to(device)\n",
+    "embedder = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\", device=device)\n",
     "\n",
     "X_train_emb = embedder.encode(\n",
-    "    X_train, batch_size=48, show_progress_bar=True, device=device\n",
+    "    X_train, batch_size=48, show_progress_bar=True\n",
     ")\n",
-    "X_test_emb  = embedder.encode(X_test, batch_size=48, device=device)"
+    "X_test_emb  = embedder.encode(X_test, batch_size=48)"
    ]
   },
   {
