--- a/models/Random_Forest.ipynb
+++ b/models/Random_Forest.ipynb
@@ -126,19 +126,18 @@
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available()\n",
-    "                      else \"mps\" if torch.mps.is_available()\n",
+    "                      else \"mps\" if torch.backends.mps.is_available()\n",
     "                      else \"cpu\")\n",
     "print(f\"Using device >> {device}\")\n",
     "\n",
-    "embedder = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\")\n",
-    "embedder = embedder.to(device)\n",
+    "embedder = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\", device=device)\n",
     "\n",
     "X_train_emb = embedder.encode(\n",
-    "    X_train, batch_size=48, show_progress_bar=True, device=device\n",
+    "    X_train, batch_size=48, show_progress_bar=True\n",
     ")\n",
     "\n",
     "X_test_emb = embedder.encode(\n",
-    "    X_test, batch_size=48, device=device\n",
+    "    X_test, batch_size=48\n",
     ")"
    ]
   },
