Updated Style Transfer and Paraphrasing (Data Augmentation)

--- a/models/Gradient_Boosting.ipynb
+++ b/models/Gradient_Boosting.ipynb
@@ -44,34 +44,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_processed_data(balanced=True).sample(n=30_000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preprocess"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split data"
+    "train_data, test_data = read_processed_data(augmented=False, balanced=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1479.7932386238906)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "train_data, test_data = split_train_test(data, test_size=0.2)"
+    "avg_length = train_data[\"text\"].apply(len).mean()\n",
+    "avg_length"
    ]
   },
   {
