--- a/models/Naive_Bayes.ipynb
+++ b/models/Naive_Bayes.ipynb
@@ -48,30 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_processed_data(balanced=True).sample(n=30_000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preprocess"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data, test_data = split_train_test(data=data, test_size=0.2)"
+    "train_data, test_data = read_processed_data(augmented=False, balanced=True)"
    ]
   },
   {
