--- a/models/k_Nearest_Neighbours.ipynb
+++ b/models/k_Nearest_Neighbours.ipynb
@@ -569,7 +569,7 @@
     "    metric='cosine',\n",
     "    n_jobs=-1\n",
     ")\n",
-    "model.fit(X_train_emb, y_train)\n"
+    "model.fit(X_train_emb, y_train)"
    ]
   },
   {
