Added model test.py

--- a/prepare_datasets/FineFake/process_dataset.ipynb
+++ b/prepare_datasets/FineFake/process_dataset.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "df.drop(columns=[\"image_path\",\n",
-    "                 \"topic\", #TODO: Add in future\n",
+    "                 \"topic\",\n",
     "                 \"entity_id\",\n",
     "                 \"fine-grained label\",\n",
     "                 \"description\",\n",
