ML models visualizations

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,8 +392,10 @@
     "        \"Simplified for general audience\",\n",
     "        \"Summarized headline-style\",\n",
     "        \"Explanatory tone\",\n",
-    "        \"Skeptical tone\",\n",
-    "        \"Curious/inquisitive tone\"]\n",
+    "        \"SMS/Chat Message Style\",\n",
+    "        \"Social Media Post\",\n",
+    "        \"Podcast Transcript Style\"\n",
+    "    ]\n",
     "\n",
     "    for domain, n_samples in samples_to_augment.items():\n",
     "        if n_samples == 0:\n",
