--- a/models/LLM/LLM_prompted.ipynb
+++ b/models/LLM/LLM_prompted.ipynb
@@ -26,6 +26,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.52.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import transformers\n",
+    "print(transformers.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
