Added RoBERTa model

--- a/models/k_Nearest_Neighbours.ipynb
+++ b/models/k_Nearest_Neighbours.ipynb
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = read_processed_data(augmented=False, balanced=False)"
+    "train_data, test_data = read_processed_data(cross_domain=True, augmented=False, balanced=False)"
    ]
   },
   {
