Fix model assertion

--- a/pipeline/pipeline.ipynb
+++ b/pipeline/pipeline.ipynb
@@ -461,7 +461,10 @@
     "    if config[\"test_set\"][\"random_domains\"]:\n",
     "        test_domains = pd.Series(data[\"domain\"].unique()).sample(n).tolist()\n",
     "    else:\n",
-    "        test_domains = data[\"domain\"].value_counts().sort_values(ascending=True).head(n).index.tolist()\n",
+    "        if config[\"test_set\"][\"manual_domains\"]:\n",
+    "            test_domains = data[\"domain\"].value_counts().sort_values(ascending=True).head(n).index.tolist()\n",
+    "        else:\n",
+    "            test_domains = data[\"domain\"].value_counts().sort_values(ascending=True).head(n).index.tolist()\n",
     "\n",
     "    test_data = data[data[\"domain\"].isin(test_domains)]\n",
     "    train_val_data = data[~data[\"domain\"].isin(test_domains)]\n",
