--- a/models/Random_Forest.ipynb
+++ b/models/Random_Forest.ipynb
@@ -32,10 +32,7 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import torch\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import torch, os"
    ]
   },
   {
@@ -52,17 +49,6 @@
    "outputs": [],
    "source": [
     "train_data, test_data = read_processed_data(augmented=False, balanced=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "train_data = pd.read_parquet(\"../pipeline/output/legacy/cross_domain-raw/preprocessed_data_train_val.parquet\")\n",
-    "test_data = pd.read_parquet(\"../pipeline/output/legacy/cross_domain-raw/preprocessed_data_test.parquet\")"
    ]
   },
   {
