Refactor and Doc Strings

--- a/models/Logistic_Regression.ipynb
+++ b/models/Logistic_Regression.ipynb
@@ -34,8 +34,7 @@
     "from sentence_transformers import SentenceTransformer\n",
     "import torch\n",
     "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "import numpy as np"
    ]
   },
   {
@@ -52,13 +51,6 @@
    "outputs": [],
    "source": [
     "train_data, test_data = read_processed_data(cross_domain=False, augmented=False, balanced=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Logistic Regression"
    ]
   },
   {
@@ -856,7 +848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict and Evaluate"
+    "### Evaluate Model"
    ]
   },
   {
