--- a/models/Naive_Bayes.ipynb
+++ b/models/Naive_Bayes.ipynb
@@ -26,13 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.naive_bayes import BernoulliNB\n",
-    "import torch"
+    "import torch\n",
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
@@ -48,14 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = read_processed_data(augmented=False, balanced=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train Naive Bayes"
+    "train_data, test_data = read_processed_data(cross_domain=False, augmented=False, balanced=False)"
    ]
   },
   {
@@ -78,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert text to TF-IDF vectors"
+    "### Transform to Vectors"
    ]
   },
   {
@@ -116,17 +111,25 @@
     "\n",
     "embedder = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\", device=device)\n",
     "\n",
-    "X_train_emb = embedder.encode(\n",
-    "    X_train, batch_size=48, show_progress_bar=True\n",
-    ")\n",
-    "X_test_emb  = embedder.encode(X_test, batch_size=48)"
+    "if os.path.isdir(\"embeddings\"):\n",
+    "    X_train_emb = np.load(\"embeddings/X_train_emb.npy\")\n",
+    "    X_test_emb = np.load(\"embeddings/X_test_emb.npy\")\n",
+    "else:\n",
+    "    X_train_emb = embedder.encode(\n",
+    "        X_train, batch_size=48, show_progress_bar=True\n",
+    "    )\n",
+    "    X_test_emb  = embedder.encode(X_test, batch_size=48)\n",
+    "\n",
+    "    os.mkdir(\"embeddings\")\n",
+    "    np.save(\"embeddings/X_train_emb.npy\", X_train_emb)\n",
+    "    np.save(\"embeddings/X_test_emb.npy\", X_test_emb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train Naive Bayes classifier"
+    "### Train Naive Bayes Classifier"
    ]
   },
   {
@@ -572,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict and Evaluate"
+    "### Evaluate Model"
    ]
   },
   {
