--- a/models/Random_Forest.ipynb
+++ b/models/Random_Forest.ipynb
@@ -32,7 +32,8 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import torch, os"
+    "import torch, os\n",
+    "import numpy as np"
    ]
   },
   {
@@ -48,14 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = read_processed_data(augmented=False, balanced=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train Random Forest"
+    "train_data, test_data = read_processed_data(cross_domain=False, augmented=False, balanced=False)"
    ]
   },
   {
@@ -95,8 +89,8 @@
     }
    ],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available()\n",
-    "                      else \"mps\" if torch.backends.mps.is_available()\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() \n",
+    "                      else \"mps\" if torch.backends.mps.is_available() \n",
     "                      else \"cpu\")\n",
     "print(f\"Using device >> {device}\")\n",
     "\n",
@@ -109,7 +103,18 @@
     "    X_train_emb = embedder.encode(\n",
     "        X_train, batch_size=48, show_progress_bar=True\n",
     "    )\n",
-    "    X_test_emb  = embedder.encode(X_test, batch_size=48)"
+    "    X_test_emb  = embedder.encode(X_test, batch_size=48)\n",
+    "\n",
+    "    os.mkdir(\"embeddings\")\n",
+    "    np.save(\"embeddings/X_train_emb.npy\", X_train_emb)\n",
+    "    np.save(\"embeddings/X_test_emb.npy\", X_test_emb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Random Forest Classifier"
    ]
   },
   {
@@ -861,6 +866,13 @@
     "    bootstrap=True\n",
     ")\n",
     "model.fit(X_train_emb, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model"
    ]
   },
   {
