--- a/models/k_Nearest_Neighbours.ipynb
+++ b/models/k_Nearest_Neighbours.ipynb
@@ -55,24 +55,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "train_data = pd.read_parquet(\"../pipeline/output/legacy/cross_domain-raw/preprocessed_data_train_val.parquet\")\n",
-    "test_data = pd.read_parquet(\"../pipeline/output/legacy/cross_domain-raw/preprocessed_data_test.parquet\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train k-Nearest-Neighbour"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -128,6 +110,13 @@
     "    os.mkdir(\"embeddings\")\n",
     "    np.save(\"embeddings/X_train_emb.npy\", X_train_emb)\n",
     "    np.save(\"embeddings/X_test_emb.npy\", X_test_emb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train kNN Classifier"
    ]
   },
   {
@@ -768,6 +757,13 @@
     "    n_jobs=-1\n",
     ")\n",
     "model.fit(X_train_emb, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model"
    ]
   },
   {
