--- a/models/Gradient_Boosting.ipynb
+++ b/models/Gradient_Boosting.ipynb
@@ -32,7 +32,9 @@
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import torch"
+    "import torch\n",
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -48,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = read_processed_data(augmented=False, balanced=True)"
+    "train_data, test_data = read_processed_data(cross_domain=False, augmented=False, balanced=False)"
    ]
   },
   {
@@ -109,20 +111,32 @@
     }
    ],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available()\n",
-    "                      else \"mps\" if torch.backends.mps.is_available()\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() \n",
+    "                      else \"mps\" if torch.backends.mps.is_available() \n",
     "                      else \"cpu\")\n",
     "print(f\"Using device >> {device}\")\n",
     "\n",
     "embedder = SentenceTransformer(\"sentence-transformers/all-MiniLM-L6-v2\", device=device)\n",
     "\n",
-    "X_train_emb = embedder.encode(\n",
-    "    X_train, batch_size=48, show_progress_bar=True\n",
-    ")\n",
+    "if os.path.isdir(\"embeddings\"):\n",
+    "    X_train_emb = np.load(\"embeddings/X_train_emb.npy\")\n",
+    "    X_test_emb = np.load(\"embeddings/X_test_emb.npy\")\n",
+    "else:\n",
+    "    X_train_emb = embedder.encode(\n",
+    "        X_train, batch_size=48, show_progress_bar=True\n",
+    "    )\n",
+    "    X_test_emb  = embedder.encode(X_test, batch_size=48)\n",
     "\n",
-    "X_test_emb = embedder.encode(\n",
-    "    X_test, batch_size=48\n",
-    ")"
+    "    os.mkdir(\"embeddings\")\n",
+    "    np.save(\"embeddings/X_train_emb.npy\", X_train_emb)\n",
+    "    np.save(\"embeddings/X_test_emb.npy\", X_test_emb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Gradient Boosting Classifier"
    ]
   },
   {
@@ -578,6 +592,13 @@
     "    random_state=42\n",
     ")\n",
     "model.fit(X_train_emb, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model"
    ]
   },
   {
