--- a/models/Support_Vector_Machine.ipynb
+++ b/models/Support_Vector_Machine.ipynb
@@ -34,7 +34,6 @@
     "from sklearn.svm import LinearSVC\n",
     "import torch\n",
     "import os\n",
-    "import pandas as pd\n",
     "import numpy as np"
    ]
   },
@@ -52,24 +51,6 @@
    "outputs": [],
    "source": [
     "train_data, test_data = read_processed_data(cross_domain=False, augmented=False, balanced=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "train_data = pd.read_parquet(\"../pipeline/output/legacy/cross_domain-raw/preprocessed_data_train_val.parquet\")\n",
-    "test_data = pd.read_parquet(\"../pipeline/output/legacy/cross_domain-raw/preprocessed_data_test.parquet\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Train SVM"
    ]
   },
   {
@@ -821,7 +802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict and Evaluate"
+    "### Evaluate Model"
    ]
   },
   {
